src/test/deca/context/invalid/classextends6.deca

class B {
    int a;
    int getA(){
        return a;
    }
}
class A extends B{
    int a;
    float getA(){
        return a;
    }
}

{

}